--- a/site/templates/twig/items/cxm/xref/form/key.twig
+++ b/site/templates/twig/items/cxm/xref/form/key.twig
@@ -8,7 +8,7 @@
 	item                   ItemXrefCustomer
 	item.item              ItemMasterItem
 #}
-{% if page.pw_template == 'cxm' %}
+{% if page.pw_template == 'somain' %}
 	<input type="hidden" name="custID" value="{{ item.custid }}">
 {% endif %}
 
