--- a/site/templates/twig/items/mxrfe/xref/form/key.twig
+++ b/site/templates/twig/items/mxrfe/xref/form/key.twig
@@ -1,4 +1,4 @@
-{% if page.pw_template == 'mxrfe' %}
+{% if page.pw_template == 'apmain' %}
 	<input type="hidden" name="mnfrID" value="{{ xref.mnfrid }}">
 {% endif %}
 
