--- a/site/templates/twig/items/cxm/xref/form/display.twig
+++ b/site/templates/twig/items/cxm/xref/form/display.twig
@@ -10,11 +10,11 @@
 	<div class="card-header">
 		<div class="row">
 			<div class="col-sm-2">
-				<strong> {{ page.pw_template == 'itm-xrefs-cxm' ? 'Item ID' : 'Customer ID' }}</strong>
+				<strong> {{ page.pw_template == 'itm' ? 'Item ID' : 'Customer ID' }}</strong>
 			</div>
 			<div class="col-sm-6">
 				<div>
-					{% if page.pw_template == 'itm-xrefs-cxm' %}
+					{% if page.pw_template == 'itm' %}
 						{{ item.itemid }} - {{ item.item.description }}
 					{% else %}
 						{{ item.custID }} - {{ item.customer.name }}
