--- a/site/templates/twig/items/vxm/xref/form/display.twig
+++ b/site/templates/twig/items/vxm/xref/form/display.twig
@@ -17,11 +17,11 @@
 			<div class="col-sm-6">
 				<div class="row">
 					<div class="col-sm-3">
-						<strong> {{ page.pw_template == 'itm-xrefs-vxm' ? 'Item ID' : 'Vendor ID' }}</strong>
+						<strong> {{ page.pw_template == 'itm' ? 'Item ID' : 'Vendor ID' }}</strong>
 					</div>
 					<div class="col-sm-8">
 						<div>
-							{% if page.pw_template == 'itm-xrefs-vxm' %}
+							{% if page.pw_template == 'itm' %}
 								{{ item.itemid }} - {{ item.item.description }}
 							{% else %}
 								{{ item.vendorid }} - {{ item.vendor.name }}
