--- a/site/templates/twig/code-tables/min/iarn/list.twig
+++ b/site/templates/twig/code-tables/min/iarn/list.twig
@@ -1,49 +1,51 @@
-<div class="list-group">
-	<div class="list-group-item bg-dark text-white">
-		<div class="row align-items-center">
-			<div class="col-2">
-				Code
-			</div>
-			<div class="col-4">
-				Description
-			</div>
-			<div class="col-3">
-				System Defined
-			</div>
-			<div class="col-3 text-center">
-				{% if page.is_print() == false %}
-					<button type="button" class="btn btn-light" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="" data-sys_defined="">
-						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
-					</button>
-				{% endif %}
-			</div>
+{% extends 'code-tables/list.twig' %}
+
+{% block list_header_row %}
+	<div class="row align-items-center">
+		<div class="col-sm-2">
+			Code
+		</div>
+		<div class="col-sm-4">
+			Description
+		</div>
+		<div class="col-sm-2">
+			Sys
+		</div>
+		<div class="col-sm-4 text-center">
+			{% if page.is_print() == false %}
+				<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
+					<i class="fa fa-plus" aria-hidden="true"></i> Add Code
+				</button>
+			{% endif %}
 		</div>
 	</div>
-	{% for code in codes %}
-		{# data-code attribute and class code is for the highlight on close #}
-		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.has_success() ) ? 'bg-success text-white' : ''}}">
-			<div class="row align-items-center">
-				<div class="col-2">
-					{{ code.code }}
-				</div>
-				<div class="col-4">
-					{{ code.description }}
-				</div>
-				<div class="col-3">
-					{{ code.sys_defined|yesorno|capitalize }}
-				</div>
-				<div class="col-3 text-center">
-					{% if page.is_print() == false %}
-						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-sys_defined="{{ code.sys_defined }}">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</button>
-						&nbsp;
-						<a href="{{ page.get_codetable_code_deleteURL(page.codetable, code.code) }}" class="btn btn-danger btn-sm delete_button {{ code.sys_defined == 'Y' ? 'disabled' : '' }}">
+{% endblock %}
+
+{% for code in codes %}
+	{% block code_row %}
+		<div class="row align-items-center">
+			<div class="col-sm-2">
+				{{ code.code }}
+			</div>
+			<div class="col-sm-4">
+				{{ code.description }}
+			</div>
+			<div class="col-sm-2">
+				{{ code.sysdefined }}
+			</div>
+			<div class="col-sm-4 text-center">
+				{% if page.is_print() == false %}
+					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
+						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+					</button>
+					&nbsp;
+					{% if code.isSysDefined() == false %}
+						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
 							<i class="fa fa-trash" aria-hidden="true"></i> Delete
 						</a>
 					{% endif %}
-				</div>
+				{% endif %}
 			</div>
 		</div>
-	{% endfor %}
-</div>
+	{% endblock %}
+{% endfor %}
