--- a/site/templates/twig/items/mxrfe/xref/notes/notes.twig
+++ b/site/templates/twig/items/mxrfe/xref/notes/notes.twig
@@ -8,7 +8,7 @@
 #}
 {% set response = session.get('response_qnote') %}
 
-{% if response %}
+{% if response and response.has_error() %}
 	{% include 'code-tables/code-table-response.twig' with {'response': response} %}
 {% endif %}
 
