--- a/site/templates/twig/items/vxm/xref/form/display.twig
+++ b/site/templates/twig/items/vxm/xref/form/display.twig
@@ -7,8 +7,10 @@
 	item                   ItemXrefCustomer
 #}
 
-{% if session.getFor('response', 'vxm') %}
-	{% include 'items/itm/response-alert.twig' with {'response': session.getFor('response', 'vxm')} %}
+{% set response = session.getFor('response', 'vxm') %}
+
+{% if response and response.has_error() %}
+	{% include 'items/itm/response-alert.twig' with {'response': response} %}
 {% endif %}
 
 <div class="card">
