--- a/site/templates/twig/code-tables/mso/rgasc/list.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/list.twig
@@ -1,36 +1,6 @@
-{#
-	var                    Description / Instance of
-	-------------------------------------------------
-	page                   ProcessWire\Page
-	manager                Dplus\Codes\Base
-#}
-{% set response = manager.getResponse() %}
+{% extends 'code-tables/list.twig' %}
 
-{% set values = input.get %}
-{% set segments = input.urlSegments() %}
-{% set lastsegment = segments[segments|length] %}
-
-<div class="mb-3">
-	{% if page.is_print() %}
-		<button onclick="window.history.back();" class="btn btn-primary d-print-none">
-			<i class="fa fa-undo" aria-hidden="true"></i> Back
-		</button>
-		&nbsp;
-		<button class="btn btn-primary d-print-none" onclick="window.print();return false;">
-			<i class="fa fa-print" aria-hidden="true"></i> Print
-		</button>
-	{% else %}
-		<a href="{{ page.menuUrl() }}" class="btn btn-primary">
-			<i class="fa fa-undo" aria-hidden="true"></i> Back to {{ page.menuTitle() }}
-		</a>
-		&nbsp;
-		<a href="{{ page.get_printURL() }}" class="btn btn-primary">
-			<i class="fa fa-print" aria-hidden="true"></i> View Printable
-		</a>
-	{% endif %}
-</div>
-
-<div class="list-group codes-list mb-3">
+{% block header_div %}
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
 			<div class="col-sm-2">
@@ -54,34 +24,34 @@
 			</div>
 		</div>
 	</div>
-	{% for code in codes %}
-		{# data-code attribute and class code is for the highlight on close #}
-		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
-			<div class="row align-items-center">
-				<div class="col-sm-2">
-					{{ code.code }}
-				</div>
-				<div class="col-sm-4">
-					{{ code.description }}
-				</div>
-				<div class="col-sm-2">
-					{{ code.whseid }}
-				</div>
-				<div class="col-sm-2">
-					{{ code.acctnbr }}
-				</div>
-				<div class="col-sm-2 text-center">
-					{% if page.is_print() == false %}
-						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.id }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</button>
-						&nbsp;
-						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
-						</a>
-					{% endif %}
-				</div>
+{% endblock %}
+
+{% for code in codes %}
+	{% block code_row %}
+		<div class="row align-items-center">
+			<div class="col-sm-2">
+				{{ code.code }}
+			</div>
+			<div class="col-sm-4">
+				{{ code.description }}
+			</div>
+			<div class="col-sm-2">
+				{{ code.whseid }}
+			</div>
+			<div class="col-sm-2">
+				{{ code.acctnbr }}
+			</div>
+			<div class="col-sm-2 text-center">
+				{% if page.is_print() == false %}
+					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.id }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
+						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+					</button>
+					&nbsp;
+					<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
+						<i class="fa fa-trash" aria-hidden="true"></i> Delete
+					</a>
+				{% endif %}
 			</div>
 		</div>
-	{% endfor %}
-</div>
+	{% endblock %}
+{% endfor %}
