--- a/site/templates/twig/code-tables/min/csccm/js/classes.js.twig
+++ b/site/templates/twig/code-tables/min/csccm/js/classes.js.twig
@@ -1,5 +1,5 @@
 {% include 'code-tables/js/classes/Alerts.js.twig' %}
 {% include 'code-tables/js/classes/Inputs.js.twig' %}
 {% include 'code-tables/js/classes/Form.js.twig' %}
-{% include 'code-tables/js/classes/Configs.js.twig' with {'manager': csccm} %}
+{% include 'code-tables/js/classes/Configs.js.twig' with {'manager': manager} %}
 {% include 'code-tables/min/csccm/js/classes/Requests.js.twig' %}
