--- a/site/templates/twig/code-tables/min/csccm/.js.twig
+++ b/site/templates/twig/code-tables/min/csccm/.js.twig
@@ -42,7 +42,7 @@ $(function() {
 			}
 		},
 		submitHandler: function(form) {
-			var formCode = CsccmForm.getInstance();
+			var formCode = CodeForm.getInstance();
 			var server   = CsccmRequests.getInstance();
 			var code = formCode.inputs.code.val();
 
