--- a/site/templates/twig/code-tables/min/igcm/.js.twig
+++ b/site/templates/twig/code-tables/min/igcm/.js.twig
@@ -72,7 +72,7 @@ $(function() {
 			}
 		},
 		submitHandler: function(form) {
-			var formCode = IgcmForm.getInstance();
+			var formCode = CodeForm.getInstance();
 			var server   = IgcmRequests.getInstance();
 			var code = formCode.inputs.code.val();
 
@@ -104,26 +104,6 @@ $(function() {
 					});
 				});
 			}
-		}
-	});
-
-/* =============================================================
-	Form Functions
-============================================================= */
-	$("#edit-code-modal").on('hidden.bs.modal', function (e) {
-		var form = formCode.inputs.form;
-		form.validate().resetForm();
-		form.find('.is-invalid').removeClass("is-invalid");
-		form.find('.is-valid').removeClass("is-valid");
-		form.find('.invalid-feedback').remove();
-		form.find('.valid-feedback').remove();
-
-		if (form.attr('data-code')) {
-			$('.code-table-alert').remove();
-			$('.bg-success').removeClass('bg-success text-white');
-			$('.highlight').removeClass('highlight');
-			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
-			$('html, body').animate({scrollTop: $('.code[data-code="'+form.attr('data-code')+'"]').offset().top,},700,'linear');
 		}
 	});
 })
