--- a/site/templates/twig/code-tables/min/igm/edit/form/gl-account.twig
+++ b/site/templates/twig/code-tables/min/igm/edit/form/gl-account.twig
@@ -1,30 +1,37 @@
-<label for="{{ name }}">{{ label }}</label>
-{% include 'util/bootstrap/form/input-group.twig' with {
-		'inputgroup': {
-			'type': 'prepend',
-			'size': 'sm',
-			'input': {
-				'name': name,
-				'value': value,
-				'addclasses': ['gl-account'],
-				'attributes': {
-					'placeholder': label ~ ' GL Account',
-					'aria-label':  label ~ ' GL Account',
-					'data-jqv': 'true',
-				}
-			},
-			'button': {
-				'colorclass': 'btn-secondary',
-				'text': 'fa fa-search'|icon,
-				'attributes': {
-					'title': 'Search GL Accounts',
-					'data-toggle': 'modal',
-					'data-target': '#ajax-modal',
-					'data-lookupurl': page.searchLookupUrl('gl-codes'),
-					'data-input': '#' ~ name
+
+<div class="row">
+	<div class="col-sm-4">
+		<label for="{{ name }}">{{ label }}</label>
+	</div>
+	<div class="col-sm-8">
+		{% include 'util/bootstrap/form/input-group.twig' with {
+				'inputgroup': {
+					'type': 'prepend',
+					'size': 'sm',
+					'input': {
+						'name': name,
+						'value': value,
+						'addclasses': ['gl-account'],
+						'attributes': {
+							'placeholder': label ~ ' GL Account',
+							'aria-label':  label ~ ' GL Account',
+							'data-jqv': 'true',
+						}
+					},
+					'button': {
+						'colorclass': 'btn-secondary',
+						'text': 'fa fa-search'|icon,
+						'attributes': {
+							'title': 'Search GL Accounts',
+							'data-toggle': 'modal',
+							'data-target': '#ajax-modal',
+							'data-lookupurl': page.searchLookupUrl('gl-codes'),
+							'data-input': '#' ~ name
+						}
+					}
 				}
 			}
-		}
-	}
-%}
-<small class="text-muted gl-desc" data-acct="{{ name }}">{{ description }}</small>
+		%}
+		<small class="text-muted gl-desc" data-acct="{{ name }}">{{ description }}</small>
+	</div>
+</div>
