FIX: use correct js classes

--- a/site/templates/twig/code-tables/min/iplm/.js.twig
+++ b/site/templates/twig/code-tables/min/iplm/.js.twig
@@ -42,7 +42,7 @@ $(function() {
 			}
 		},
 		submitHandler: function(form) {
-			var formCode = IplmForm.getInstance();
+			var formCode = CodeForm.getInstance();
 			var server   = IplmRequests.getInstance();
 			var code = formCode.inputs.code.val();
 
