--- a/site/templates/twig/code-tables/min/tarm/js/classes/Configs.js.twig
+++ b/site/templates/twig/code-tables/min/tarm/js/classes/Configs.js.twig
@@ -11,17 +11,17 @@ class TarmConfigs {
 	constructor() {
 		this.fields = {
 			code: {
-				maxlength: {{ tarm.fieldAttribute('code', 'maxlength') }}
+				maxlength: {{ manager.fieldAttribute('code', 'maxlength') }}
 			},
 			description: {
-				maxlength: {{ tarm.fieldAttribute('description', 'maxlength') }}
+				maxlength: {{ manager.fieldAttribute('description', 'maxlength') }}
 			},
 			number: {
-				maxlength: {{ tarm.fieldAttribute('number', 'maxlength') }}
+				maxlength: {{ manager.fieldAttribute('number', 'maxlength') }}
 			},
 			percent: {
-				precision: {{ tarm.fieldAttribute('percent', 'precision') }},
-				max: {{ tarm.fieldAttribute('percent', 'max') }},
+				precision: {{ manager.fieldAttribute('percent', 'precision') }},
+				max: {{ manager.fieldAttribute('percent', 'max') }},
 			},
 		};
 	}
