--- a/site/templates/twig/code-tables/min/umm/.js.twig
+++ b/site/templates/twig/code-tables/min/umm/.js.twig
@@ -14,6 +14,14 @@ $(function() {
 	{% include 'code-tables/js/events/input-code-change.js.twig' %}
 	{% include 'code-tables/js/events/input-code-force-focus.js.twig' %}
 
+	$("body").on('change', 'input[name=conversion]', function(e) {
+		e.preventDefault();
+		var input = $(this);
+		var value = parseFloat(input.val());
+
+		input.val(value.toFixed(formCode.config.fields.conversion.precision));
+	});
+
 /* =============================================================
 	Lookup Modal
 ============================================================= */
