--- a/site/templates/twig/code-tables/mgl/dtm/list.twig
+++ b/site/templates/twig/code-tables/mgl/dtm/list.twig
@@ -1,80 +1,78 @@
-{#
-	var                    Description / Instance of
-	-------------------------------------------------
-	page                   ProcessWire\Page
-	manager                Dplus\Codes\Base
-#}
+{% extends 'code-tables/list.twig' %}
+
 {% set response = manager.getResponse() %}
 
-<div class="list-group codes-list">
-	<div class="list-group-item bg-dark text-white">
+{% set values = input.get %}
+{% set segments = input.urlSegments() %}
+{% set lastsegment = segments[segments|length] %}
+
+{% block list_header_row %}
+	<div class="row align-items-center">
+		<div class="col-sm-2">
+			Code
+		</div>
+		<div class="col-sm-7">
+			Description
+		</div>
+		<div class="col-sm-3 text-center">
+			{% if page.is_print() == false %}
+				<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
+					<i class="fa fa-plus" aria-hidden="true"></i> Add Code
+				</button>
+			{% endif %}
+		</div>
+	</div>
+{% endblock %}
+
+{% for code in codes %}
+	{% block code_row %}
 		<div class="row align-items-center">
 			<div class="col-sm-2">
-				Code
+				{{ code.code }}
 			</div>
 			<div class="col-sm-7">
-				Description
+				{{ code.description }}
 			</div>
 			<div class="col-sm-3 text-center">
 				{% if page.is_print() == false %}
-					<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
-						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
+					<button class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target=".gl-accounts[data-code='{{ code.code }}']" aria-expanded="{{ input.get.offsetExists('print') ? 'true' : 'false'}}" aria-controls=".gl-accounts[data-code='{{ code.code }}']">
+						<i class="fa fa-list-ol" aria-hidden="true"></i> Show Accts
 					</button>
+					&nbsp;
+					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
+						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+					</button>
+					&nbsp;
+					<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
+						<i class="fa fa-trash" aria-hidden="true"></i> Delete
+					</a>
 				{% endif %}
 			</div>
 		</div>
-	</div>
-	{% for code in codes %}
-		{# data-code attribute and class code is for the highlight on close #}
-		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
-			<div class="row mb-2">
-				<div class="col-sm-2">
-					{{ code.code }}
-				</div>
-				<div class="col-sm-7">
-					{{ code.description }}
-				</div>
-				<div class="col-sm-3 text-center">
-					{% if page.is_print() == false %}
-						<button class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target=".gl-accounts[data-code='{{ code.code }}']" aria-expanded="{{ input.get.offsetExists('print') ? 'true' : 'false'}}" aria-controls=".gl-accounts[data-code='{{ code.code }}']">
-							<i class="fa fa-list-ol" aria-hidden="true"></i> Show Accts
-						</button>
-						&nbsp;
-						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</button>
-						&nbsp;
-						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
-						</a>
-					{% endif %}
-				</div>
-			</div>
-			<div class="row collapse gl-accounts {{ input.get.offsetExists('print') ? 'show' : ''}}" data-code="{{ code.code }}">
-				<div class="col-sm-1"></div>
-				<div class="col-sm-8">
-					<table class="table table-sm">
-						<thead>
+		<div class="row collapse gl-accounts {{ input.get.offsetExists('print') ? 'show' : ''}}" data-code="{{ code.code }}">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-8">
+				<table class="table table-sm">
+					<thead>
+						<tr>
+							<th>Account #</th>
+							<th>Description</th>
+							<th>Percent</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for i in 1..manager.getNbrOfGlAccts() if code.getAccountNbr(i) != '' %}
+							{% set glAcct = code.getGlAccount(code.getAccountNbr(i)) %}
 							<tr>
-								<th>Account #</th>
-								<th>Description</th>
-								<th>Percent</th>
+								<td>{{ code.getAccountNbr(i) }}</td>
+								<td>{{ glAcct.description }}</td>
+								<td>{{ code.getAccountPct(i) }}</td>
 							</tr>
-						</thead>
-						<tbody>
-							{% for i in 1..manager.getNbrOfGlAccts() if code.getAccountNbr(i) != '' %}
-								{% set glAcct = code.getGlAccount(code.getAccountNbr(i)) %}
-								<tr>
-									<td>{{ code.getAccountNbr(i) }}</td>
-									<td>{{ glAcct.description }}</td>
-									<td>{{ code.getAccountPct(i) }}</td>
-								</tr>
-							{% endfor %}
-						</tbody>
-					</table>
-				</div>
-				<div class="col-sm-3"></div>
+						{% endfor %}
+					</tbody>
+				</table>
 			</div>
+			<div class="col-sm-3"></div>
 		</div>
-	{% endfor %}
-</div>
+	{% endblock %}
+{% endfor %}
