--- a/site/templates/twig/code-tables/mgl/ttm/list.twig
+++ b/site/templates/twig/code-tables/mgl/ttm/list.twig
@@ -1,70 +1,68 @@
-{#
-	var                    Description / Instance of
-	-------------------------------------------------
-	page                   ProcessWire\Page
-	manager                Dplus\Codes\Base
-#}
+{% extends 'code-tables/list.twig' %}
+
 {% set response = manager.getResponse() %}
 
-<div class="list-group codes-list">
-	<div class="list-group-item bg-dark text-white">
+{% set values = input.get %}
+{% set segments = input.urlSegments() %}
+{% set lastsegment = segments[segments|length] %}
+
+{% block list_header_row %}
+	<div class="row align-items-center">
+		<div class="col-sm-2">
+			Code
+		</div>
+		<div class="col-sm-3">
+			{{ input.get.offsetExists('print') ? 'Lines' : 'Line 1' }}
+		</div>
+		<div class="col-sm-3">
+			{{ input.get.offsetExists('print') ? '' : 'Line 2' }}
+		</div>
+		<div class="col-sm-4 text-center">
+			{% if page.is_print() == false %}
+				<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
+					<i class="fa fa-plus" aria-hidden="true"></i> Add Code
+				</button>
+			{% endif %}
+		</div>
+	</div>
+{% endblock %}
+
+{% for code in codes %}
+	{% block code_row %}
 		<div class="row align-items-center">
 			<div class="col-sm-2">
-				Code
+				{{ code.code }}
 			</div>
 			<div class="col-sm-3">
-				{{ input.get.offsetExists('print') ? 'Lines' : 'Line 1' }}
+				{{ input.get.offsetExists('print') ? '' : code.text1 }}
 			</div>
 			<div class="col-sm-3">
-				{{ input.get.offsetExists('print') ? '' : 'Line 2' }}
+				{{ input.get.offsetExists('print') ? '' : code.text2 }}
 			</div>
 			<div class="col-sm-4 text-center">
 				{% if page.is_print() == false %}
-					<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
-						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
+					<button class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target=".text-lines[data-code='{{ code.code }}']" aria-expanded="{{ input.get.offsetExists('print') ? 'true' : 'false'}}" aria-controls=".text-lines[data-code='{{ code.code }}']">
+						<i class="fa fa-list" aria-hidden="true"></i> Show Lines
 					</button>
+					&nbsp;
+					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
+						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+					</button>
+					&nbsp;
+					<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
+						<i class="fa fa-trash" aria-hidden="true"></i> Delete
+					</a>
 				{% endif %}
 			</div>
 		</div>
-	</div>
-	{% for code in codes %}
-		{# data-code attribute and class code is for the highlight on close #}
-		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
-			<div class="row align-items-center">
-				<div class="col-sm-2">
-					{{ code.code }}
-				</div>
-				<div class="col-sm-3">
-					{{ input.get.offsetExists('print') ? '' : code.text1 }}
-				</div>
-				<div class="col-sm-3">
-					{{ input.get.offsetExists('print') ? '' : code.text2 }}
-				</div>
-				<div class="col-sm-4 text-center">
-					{% if page.is_print() == false %}
-						<button class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target=".text-lines[data-code='{{ code.code }}']" aria-expanded="{{ input.get.offsetExists('print') ? 'true' : 'false'}}" aria-controls=".text-lines[data-code='{{ code.code }}']">
-							<i class="fa fa-list" aria-hidden="true"></i> Show Lines
-						</button>
-						&nbsp;
-						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</button>
-						&nbsp;
-						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
-						</a>
-					{% endif %}
-				</div>
+		<div class="row text-lines collapse {{ input.get.offsetExists('print') ? 'show' : ''}}" data-code="{{ code.code }}">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-6">
+				{% for i in 1..4 %}
+					{{ code.text(i) }} <br>
+				{% endfor %}
 			</div>
-			<div class="row text-lines collapse {{ input.get.offsetExists('print') ? 'show' : ''}}" data-code="{{ code.code }}">
-				<div class="col-sm-2"></div>
-				<div class="col-sm-6">
-					{% for i in 1..4 %}
-						{{ code.text(i) }} <br>
-					{% endfor %}
-				</div>
-				<div class="col-sm-4"></div>
-			</div>
+			<div class="col-sm-4"></div>
 		</div>
-	{% endfor %}
-</div>
+	{% endblock %}
+{% endfor %}
