REFACTOR: remove unneeded twig files

--- a/site/templates/twig/code-tables/mpm/dcm/js/classes.js.twig
+++ b/site/templates/twig/code-tables/mpm/dcm/js/classes.js.twig
@@ -1,5 +1,5 @@
-{% include 'code-tables/mpm/dcm/js/classes/Configs.js.twig' %}
+{% include 'code-tables/js/classes/Configs.js.twig' with {'manager': dcm} %}
 {% include 'code-tables/mpm/dcm/js/classes/Requests.js.twig' %}
-{% include 'code-tables/mpm/dcm/js/classes/Alerts.js.twig' %}
-{% include 'code-tables/mpm/dcm/js/classes/Inputs.js.twig' %}
-{% include 'code-tables/mpm/dcm/js/classes/Form.js.twig' %}
+{% include 'code-tables/js/classes/Alerts.js.twig' %}
+{% include 'code-tables/js/classes/Inputs.js.twig' %}
+{% include 'code-tables/js/classes/Form.js.twig' %}
