--- a/site/templates/twig/code-tables/mpm/dcm/.js.twig
+++ b/site/templates/twig/code-tables/mpm/dcm/.js.twig
@@ -2,8 +2,8 @@
 
 $(function() {
 	var server   = DcmRequests.getInstance();
-	var alert    = DcmAlerts.getInstance();
-	var formCode = DcmForm.getInstance();
+	var alert    = CodeAlerts.getInstance();
+	var formCode = CodeForm.getInstance();
 
 /* =============================================================
 	Event Functions
@@ -42,7 +42,7 @@ $(function() {
 			}
 		},
 		submitHandler: function(form) {
-			var formCode = DcmForm.getInstance();
+			var formCode = CodeForm.getInstance();
 			var server   = DcmRequests.getInstance();
 			var code = formCode.inputs.code.val();
 
@@ -50,7 +50,7 @@ $(function() {
 				form.submit();
 			} else {
 				server.validateCode(code, function(exists) {
-					var alert = DcmAlerts.getInstance();
+					var alert = CodeAlerts.getInstance();
 					if (exists === false) {
 						form.submit();
 						return true;
@@ -74,26 +74,6 @@ $(function() {
 					});
 				});
 			}
-		}
-	});
-
-/* =============================================================
-	Form Functions
-============================================================= */
-	$("#edit-code-modal").on('hidden.bs.modal', function (e) {
-		var form = formCode.inputs.form;
-		form.validate().resetForm();
-		form.find('.is-invalid').removeClass("is-invalid");
-		form.find('.is-valid').removeClass("is-valid");
-		form.find('.invalid-feedback').remove();
-		form.find('.valid-feedback').remove();
-
-		if (form.attr('data-code')) {
-			$('.code-table-alert').remove();
-			$('.bg-success').removeClass('bg-success text-white');
-			$('.highlight').removeClass('highlight');
-			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
-			$('html, body').animate({scrollTop: $('.code[data-code="'+form.attr('data-code')+'"]').offset().top,},700,'linear');
 		}
 	});
 })
