--- a/site/templates/twig/util/paginator/propel.twig
+++ b/site/templates/twig/util/paginator/propel.twig
@@ -9,7 +9,7 @@
 	<div>
 		<ul class="pagination">
 			<li class="page-item {{ (pager.isFirstPage()) ? 'disabled' : '' }}">
-				<a href="{{ page.paginatefull(input.pageNum() - 1) }}" class="page-link paginator-link" aria-label="Previous">
+				<a href="{{ input.paginateUrl(input.pageNum() - 1, {'removeFromQueryString': ['focus']}) }}" class="page-link paginator-link" aria-label="Previous">
 					<span aria-hidden="true">&laquo;</span>
 				</a>
 			</li>
@@ -22,7 +22,7 @@
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 						{% for i in 1..pager.getLastPage() %}
 							{% if i > 0 %}
-								<a class="dropdown-item paginator-link {{ (pager.getPage() == i) ? 'active' : '' }}" href="{{ page.paginatefull(i) }}">
+								<a class="dropdown-item paginator-link {{ (pager.getPage() == i) ? 'active' : '' }}" href="{{ input.paginateUrl(i, {'removeFromQueryString': ['focus']}) }}">
 									{{ i }}
 								</a>
 							{% endif %}
@@ -32,7 +32,7 @@
 			</li>
 
 			<li class="page-item {{ (pager.isLastPage()) ? 'disabled' : '' }}">
-				<a href="{{ page.paginatefull(pager.getNextPage()) }}" aria-label="Next" class="page-link paginator-link">
+				<a href="{{ input.paginateUrl(pager.getNextPage(), {'removeFromQueryString': ['focus']}) }}" aria-label="Next" class="page-link paginator-link">
 					<span aria-hidden="true">&raquo;</span>
 				</a>
 			</li>
