--- a/site/templates/twig/items/cxm/search/customer/results.twig
+++ b/site/templates/twig/items/cxm/search/customer/results.twig
@@ -1,5 +1,11 @@
-<div>
+<div class="mb-3">
 	{% include 'items/cxm/search/customer/form.twig' %}
+
+	{% if input.get.text('q') %}
+		<a href="{{ page.custUrl(input.get.text('custID')) }}" class="btn btn-warning mt-2">
+			<i class="fa fa-times"></i> Clear Search
+		</a>
+	{% endif %}
 </div>
 <div>
 	<div class="row">
