--- a/site/templates/twig/util/qnotes-textarea.twig
+++ b/site/templates/twig/util/qnotes-textarea.twig
@@ -1,1 +1,1 @@
-<textarea name="{{ name ? name : 'note' }}" id="{{ id ? id : 'note' }}" wrap="hard" class="form-control w-auto qnotes validate-ignore" rows="{{ rows ? rows : 10 }}" cols="{{ cols }}" {{ readonly ? 'readonly' : '' }}>{{ val }}</textarea>
+<textarea name="{{ name ? name : 'note' }}" id="{{ id ? id : 'note' }}" wrap="hard" class="form-control w-auto qnotes {{ required ? '' : 'validate-ignore' }}" rows="{{ rows ? rows : 10 }}" cols="{{ cols }}" {{ readonly ? 'readonly' : '' }} {{ required ?  'required="true"' : ''}}>{{ val }}</textarea>
