--- a/site/templates/twig/code-tables/optm/list/.js.twig
+++ b/site/templates/twig/code-tables/optm/list/.js.twig
@@ -4,6 +4,6 @@ $(function() {
 	
 	if (query.hasOwnProperty('focus') && query.focus != '' && query.focus != 'new') {
 		$('tr[data-id="'+query.focus+'"]').addClass('highlight');
-		$('html, body').animate({scrollTop: $('tr[data-id="'+query.focus+'"]').offset().top,},700,'linear');
+		// $('html, body').animate({scrollTop: $('tr[data-id="'+query.focus+'"]').offset().top,},700,'linear');
 	}
 });
