RQST: stop scrolling to highlight
Requested By: Bev, Vicki, Roger

--- a/site/templates/twig/code-tables/js.twig
+++ b/site/templates/twig/code-tables/js.twig
@@ -15,6 +15,6 @@ $(function() {
 
 	if (queryData.hasOwnProperty('focus') && queryData.focus != 'new') {
 		$('.code[data-code="' + queryData.focus + '"]').addClass('highlight');
-		$('html, body').animate({scrollTop: $('.code[data-code="' + queryData.focus + '"]').offset().top,},700,'linear');
+		{# $('html, body').animate({scrollTop: $('.code[data-code="' + queryData.focus + '"]').offset().top,},700,'linear'); #}
 	}
 });
