--- a/site/templates/twig/items/item-list.js.twig
+++ b/site/templates/twig/items/item-list.js.twig
@@ -2,6 +2,6 @@ $(function() {
 	{% set input = page.wire('input') %}
 	{% if input.get.offsetExists('focus') and input.get.text('focus') != 'new' %}
 		$('tr[data-itemid="{{ input.get.text('focus') }}"]').addClass('highlight');
-		$('html, body').animate({scrollTop: $('[data-itemid="{{ input.get.text('focus') }}"]').offset().top,},700,'linear');
+		// $('html, body').animate({scrollTop: $('[data-itemid="{{ input.get.text('focus') }}"]').offset().top,},700,'linear');
 	{% endif %}
 });
