--- a/site/templates/twig/items/itm/options/.js.twig
+++ b/site/templates/twig/items/itm/options/.js.twig
@@ -15,7 +15,7 @@ $(function() {
 
 		if (element.length) {
 			element.addClass('highlight');
-			$('html, body').animate({scrollTop: element.offset().top,},700,'linear');
+			// $('html, body').animate({scrollTop: element.offset().top,},700,'linear');
 		}
 	}
 
