--- a/site/templates/twig/mar/armain/pty3/customer-accounts/.js.twig
+++ b/site/templates/twig/mar/armain/pty3/customer-accounts/.js.twig
@@ -11,7 +11,7 @@ $(function() {
 
 	if (queryData.hasOwnProperty('focus') && queryData.focus != 'new') {
 		$('.account[data-accountnbr="' + queryData.focus + '"]').addClass('highlight');
-		$('html, body').animate({scrollTop: $('.account[data-accountnbr="' + queryData.focus + '"]').offset().top,},700,'linear');
+		// $('html, body').animate({scrollTop: $('.account[data-accountnbr="' + queryData.focus + '"]').offset().top,},700,'linear');
 	}
 
 /* =============================================================
