--- a/site/templates/twig/code-tables/msa/sysop/list/.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/list/.js.twig
@@ -4,6 +4,6 @@ $(function() {
 	
 	if (uri.hasQuery('focus') && query.focus != 'new') {
 		$('.code[data-code="' + query.focus + '"]').addClass('highlight');
-		$('html, body').animate({scrollTop: $('.code[data-code="' + query.focus + '"]').offset().top,},700,'linear');
+		// $('html, body').animate({scrollTop: $('.code[data-code="' + query.focus + '"]').offset().top,},700,'linear');
 	}
 });
