--- a/site/templates/twig/items/itm/xrefs/substitutes/list/js.twig
+++ b/site/templates/twig/items/itm/xrefs/substitutes/list/js.twig
@@ -3,6 +3,6 @@ $(function() {
 	var queryMap = uri.query(true);
 	if (queryMap.focus) {
 		$('tr[data-subitemid="' + queryMap.focus + '"]').addClass('highlight');
-		$('html, body').animate({scrollTop: $('[data-vxm="' + queryMap.focus + '"]').offset().top,},700,'linear');
+		// $('html, body').animate({scrollTop: $('[data-vxm="' + queryMap.focus + '"]').offset().top,},700,'linear');
 	}
 });
