--- a/site/templates/twig/items/mxrfe/xref/notes/js.twig
+++ b/site/templates/twig/items/mxrfe/xref/notes/js.twig
@@ -18,7 +18,7 @@
 
 $(function() {
 	{% if page.session.get('response_qnote') %}
-		$('html, body').animate({scrollTop: $('#notes-tab').offset().top - 60}, 1000);
+		// $('html, body').animate({scrollTop: $('#notes-tab').offset().top - 60}, 1000);
 	{% endif %}
 
 	$('body').on('keyup change paste', 'form input, select, textarea', function(){
