--- a/site/templates/twig/items/vxm/list/xref/js.twig
+++ b/site/templates/twig/items/vxm/list/xref/js.twig
@@ -2,7 +2,7 @@ $(function() {
 	{% if page.focus and page.focus != 'new' %}
 		$('tr[data-vxm="{{ page.focus }}"]').addClass('highlight');
 		// $('html, body').animate({scrollTop: $('#{{ page.focus }}').offset().top,},700,'linear');
-		$('html, body').animate({scrollTop: $('[data-vxm="{{ page.focus }}"]').offset().top,},700,'linear');
+		// $('html, body').animate({scrollTop: $('[data-vxm="{{ page.focus }}"]').offset().top,},700,'linear');
 	{% endif %}
 
 /* =============================================================
