--- a/site/templates/twig/items/vxm/notes/js.twig
+++ b/site/templates/twig/items/vxm/notes/js.twig
@@ -14,6 +14,6 @@
 
 $(function() {
 	{% if session.get('response_qnote') %}
-		$('html, body').animate({scrollTop: $('#notes-tab').offset().top - 60}, 1000);
+		// $('html, body').animate({scrollTop: $('#notes-tab').offset().top - 60}, 1000);
 	{% endif %}
 });
