--- a/site/templates/twig/min/inmain/i2i/list/.js.twig
+++ b/site/templates/twig/min/inmain/i2i/list/.js.twig
@@ -6,7 +6,7 @@ $(function() {
 
 		if ($('tr[data-key="'+focus+'"]').length) {
 			$('tr[data-key="'+focus+'"]').addClass('highlight');
-			$('html, body').animate({scrollTop: $('[data-key="'+focus+'"]').offset().top,},700,'linear');
+			// $('html, body').animate({scrollTop: $('[data-key="'+focus+'"]').offset().top,},700,'linear');
 		}
 	}
 });
