--- a/site/templates/twig/mpm/bmm/list/.js.twig
+++ b/site/templates/twig/mpm/bmm/list/.js.twig
@@ -5,7 +5,7 @@ $(function() {
 
 	if (queryData.focus) {
 		$('tr[data-bomid="'+ queryData.focus +'"]').addClass('highlight');
-		$('html, body').animate({scrollTop: $('[data-bomid="' + queryData.focus + '"]').offset().top,},700,'linear');
+		// $('html, body').animate({scrollTop: $('[data-bomid="' + queryData.focus + '"]').offset().top,},700,'linear');
 	}
 
 /* =============================================================
